<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ribbit</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_logout">Log Out</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="signup_text">Sign Up!</string>
    <string name="login_text">Log In</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="signup_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter a username, password and email address!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter your username and password!</string>
    <string name="login_error_title">Oops!</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="action_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="action_settings">Settings</string>
    <string name="edit_friends_error_title">We\'re sorry!</string>
    <string name="title_activity_profile">User Profile</string>
    <string name="profile_title">User Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="save_button_label">Save</string>
    <string name="name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="hometown_hint">Hometown</string>
    <string name="website_hint">Website</string>
    <string name="edit_profile_error_message">Email field can not be empty!</string>
    <string name="action_camera">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_file_size_warning">The selected video must be less than 10 MB.</string>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="error_file_too_large">Selected file is too large.</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="search_hint">Search users</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

</resources>
